--- a/Frontend (Angular 14)/angularProject/src/app/paginas/login/login.component.html
+++ b/Frontend (Angular 14)/angularProject/src/app/paginas/login/login.component.html
@@ -49,9 +49,9 @@
             <span class="checkmark"></span>
           </label>
         </div>
-        <div class="w-50 text-md-right">
+        <!-- <div class="w-50 text-md-right">
             <a href="#">Has olvidado tu contraseña  </a>
-        </div>
+        </div> -->
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary rounded submit p-3 px-5" [disabled]="!loginForm.valid">Iniciar sesión</button>
